# z-band-prime-prefilter

./: .gitignore  GWR_PROOF.md  LICENSE  README.md
docs/: architecture.md  benchmarks.md  current_headline_results.md  dci_gap_ridge.md  dci_prefilter.md  dci_rh_bridge.md  dni_gap_ridge.md  dni_prefilter.md  dni_rh_bridge.md  executive_summary_pgs_prime_generator.md  manual_validation.md  repo_split_diagram.md  test_plan_10e18.md
gwr/: README.md
output/: d4_square_residue_dead_zone.csv  d4_square_residue_dead_zone_summary.json  d4_square_threat_frontier.csv  d4_square_threat_frontier_summary.json  d4_square_threat_r2_minus_4_obstruction.csv  d4_square_threat_r2_minus_4_obstruction_summary.json  edge_run_1e6.json  gwr_compression_shock_probe_history.jsonl  gwr_compression_shock_probe_models.csv  gwr_compression_shock_probe_summary.json  gwr_dni_gap_type_engine_v1_summary.json  gwr_dni_gap_type_long_horizon_controller_probe_summary.json  gwr_dni_gap_type_sequence_probe_summary.json  gwr_hidden_state_miner_candidates.csv  gwr_hidden_state_miner_history.jsonl  gwr_hidden_state_miner_summary.json  gwr_phase_reset_hunter_history.jsonl  (+15 more)
spec/: contract.md
src/python/: pyproject.toml
src/python/geodesic_prime_prefilter/: __init__.py  prefilter.py
src/python/geodesic_prime_rh_bridge/: __init__.py  bridge.py
src/python/z_band_prime_composite_field/: field.py
src/python/z_band_prime_gap_ridge/: runs.py
src/python/z_band_prime_predictor/: __init__.py  gpe_nlsc_selector.py  pgs_closure.py  simple_pgs_audit.py  simple_pgs_controller.py  simple_pgs_generator.py
(+5512 files in other folders)
